# frida-mcp

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-29-frida-mcp.md
docs/superpowers/specs/: 2026-06-29-frida-mcp-design.md
src/frida_mcp/: __main__.py  agent.js  server.py  session.py  store.py  values.py
tests/: test_server.py  test_session_resume.py  test_smoke.py  test_store.py  test_values.py
tests/integration/: test_frida_live.py
